--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-  
   <div class="grid-container">
     <div class="item1 header">
       <img 
@@ -14,17 +13,26 @@
         style="width:256px;height:128px;">
     </div>
     <div class="item2 intro-card">
-      <p>My name is Adrienne and I am...</p>
+      <p>My name is <b>Adrienne</b> and I am...</p>
         <ul>
           <li>a computer science and engineering student</li>
           <li>an aspiring software engineer</li>
         </ul>
     </div>
-    <div class="item3 nav-cards">Projects</div>
-    <div class="item4 nav-cards">Experience</div>  
-    <div class="item5 nav-cards">Contact</div>
-    <div class="item6 footer">2021</div>
+    <div class="item3 nav-cards">
+      <a href="about.html">About</a>
+    </div>
+    <div class="item4 nav-cards">
+      <a href="projects.html">Projects</a>
+    </div>
+    <div class="item5 nav-cards">
+      <a href="experience.html">Experience</a>
+    </div>  
+    <div class="item6 nav-cards">
+      <a href="contact.html">Contact</a>
+    </div>
+    <div class="item7 footer">2021</div>
   </div>
-  
   </body>
+
   </html>
