--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
-<html class="page">
+<html>
 <head>
-<link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div class="grid-container">
-    <div class="item1 header">
-      <img 
-        src="greeting-with-color.png" 
-        alt="cursive text 'hello'"
-        style="width:256px;height:128px;">
-    </div>
-    <div class="item2 intro-card">
-      <p>My name is <b>Adrienne</b> and I am...</p>
-        <ul>
-          <li>a computer science and engineering student</li>
-          <li>an aspiring software engineer</li>
-        </ul>
-    </div>
-    <div class="item3 nav-cards">
-      <a href="about.html">About</a>
-    </div>
-    <div class="item4 nav-cards">
-      <a href="projects.html">Projects</a>
-    </div>
-    <div class="item5 nav-cards">
-      <a href="experience.html">Experience</a>
-    </div>  
-    <div class="item6 nav-cards">
-      <a href="contact.html">Contact</a>
-    </div>
-    <div class="item7 footer">2021</div>
-  </div>
-  </body>
 
-  </html>
+  <div class="intro" id="introduction">
+    <h2>Hello,</h2> 
+    <h5>My name is Adrienne</h5>
+  </div>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><h4 class="navbar navbar-icon">AJB</h4></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  
+  <div class="card" id="projects">
+    <h3>Projects</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+      culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+  <div class="card" id="experience">
+    <h3>Experience</h3>
+  </div>
+  <div class="card" id="about">
+    <h3>About</h3>
+  </div>
+  <div class="card" id="contact">
+    <h3>Contact</h3>
+  </div>
+
+</body>
+
+</html>
