--- a/index.html
+++ b/index.html
@@ -129,7 +129,17 @@
   </div>
 
 
-  <footer><small>&copy; 2022, Adrienne B. All rights reserved.</small></footer>
+  <footer>
+    <div><small>&copy; 2022, Adrienne B. All rights reserved.</small></div>
+    <div style="padding: 0.5rem 10rem;">
+      <small><i>All product names, logos, brands, and trademarks 
+      are property of their respective owners. All company, 
+      product and service names used in this website are for 
+      identification purposes only. Use of these names, trademarks 
+      and brands does not imply endorsement.</i></small>
+    </div>
+
+  </footer>
 </body>
 
 </html>
