Adjust speed of typing animation and add reduced motion media query

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div style="margin: 0 1rem; text-align: center;">
         <span class="words"></span>
         <span class="letter-changer"></span>
-        <span class="accessibility">Hello</span>
+        <span class="accessibility">Hello, my name is Adrienne</span>
       </div>
     </div>
 
