Change spacing within experience section

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
   <div class="card" id="experience">
     <h3 class="section-title">Experience</h3>
 
-    <div class="exp-title">
-      <h4>Title</h4>
-      <h5>Company/Organization</h5>
+    <div class="exp-item">
+      <h4 class="exp-title">Title</h4>
+      <h5 class="exp-title">Company/Organization</h5>
       <p>Aliquam purus sit amet luctus venenatis lectus. 
       Gravida neque convallis a cras semper auctor neque vitae.</p>
     </div>
 
-    <div class="exp-title">
-      <h4>Title</h4>
-      <h5>Company/Organization</h5>
+    <div class="exp-item">
+      <h4 class="exp-title">Title</h4>
+      <h5 class="exp-title">Company/Organization</h5>
       <p>Venenatis cras sed felis eget velit aliquet. 
         Purus viverra accumsan in nisl nisi scelerisque eu ultrices. 
         Adipiscing diam donec adipiscing tristique risus nec.</p>
