--- a/index.html
+++ b/index.html
@@ -38,15 +38,37 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><img src="ajb-icon.png" class="navbar-icon" style="width: 96px;"></li>
       <li><a href="#about">About</a></li>
+      <li><a class="nav-link nav-link-ltr" href="#projects">Projects</a></li>
+      <li><img src="ajb-icon.png" class="navbar-icon" style="width: 96px;"></li>
+      <li><a href="#experience">Experience</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   
 
+  <div class="card" id="about">
+    <h3 class="section-title">About</h3>
+    <div style="margin: 0 10px;">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Pretium quam vulputate dignissim suspendisse in est ante. 
+      </p>
+      <p>
+        Diam maecenas sed enim ut sem viverra. Arcu dictum varius duis 
+        at consectetur lorem donec. Enim nunc faucibus a pellentesque sit amet porttitor eget. 
+        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Dui nunc 
+        mattis enim ut tellus elementum.
+      </p>
+      <p>
+        Quis hendrerit dolor magna eget est lorem ipsum dolor. 
+        Tortor vitae purus faucibus ornare suspendisse sed. 
+      </p> 
+    </div>
+  </div>
+
+  
   <div class="card" id="projects">
     <h3 class="section-title">Projects</h3>
 
@@ -129,28 +151,6 @@
       <p>Venenatis cras sed felis eget velit aliquet. 
         Purus viverra accumsan in nisl nisi scelerisque eu ultrices. 
         Adipiscing diam donec adipiscing tristique risus nec.</p>
-    </div>
-  </div>
-
-
-  <div class="card" id="about">
-    <h3 class="section-title">About</h3>
-    <div style="margin: 0 10px;">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Pretium quam vulputate dignissim suspendisse in est ante. 
-      </p>
-      <p>
-        Diam maecenas sed enim ut sem viverra. Arcu dictum varius duis 
-        at consectetur lorem donec. Enim nunc faucibus a pellentesque sit amet porttitor eget. 
-        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Dui nunc 
-        mattis enim ut tellus elementum.
-      </p>
-      <p>
-        Quis hendrerit dolor magna eget est lorem ipsum dolor. 
-        Tortor vitae purus faucibus ornare suspendisse sed. 
-      </p> 
     </div>
   </div>
 
