--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>ajbisaillon.dev</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index-animations.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -68,7 +69,7 @@
     </div>
   </div>
 
-  
+
   <div class="card" id="projects">
     <h3 class="section-title">Projects</h3>
 
