--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <ul>
       <li><a href="#about">About</a></li>
       <li><a class="nav-link nav-link-ltr" href="#projects">Projects</a></li>
-      <li><img src="ajb-icon.png" class="navbar-icon" style="width: 96px;"></li>
+      <li><img src="ajb-icon15.png" class="navbar-icon" style="width: 96px;"></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
