--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bisaillon | Portfolio</title>
+    <title>Bisaillon</title>
     <link rel="stylesheet" href="index.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inconsolata:wght@200;300&family=Prompt:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- icons -->
+    <script
+      src="https://kit.fontawesome.com/238a71e136.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <div class="center main-content">
       <div>
-        <h1>yourname goeshere</h1>
+        <h1>Adrienne Bisaillon</h1>
+        <h2>Software Engineer</h2>
         <div class="divider"></div>
         <p>
           "But I must explain to you how all this mistaken idea of denouncing
@@ -24,11 +39,16 @@
           encounter consequences that are extremely painful."
         </p>
       </div>
+
+      <div>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-regular fa-paper-plane"></i>
+      </div>
     </div>
   </body>
 </html>
 
-<!-- TODO: min/max main content width -->
-<!-- TODO: contact options - button links -->
+<!-- TODO: add links to contact buttons -->
 <!-- TODO: fade in while loading -->
-<!-- TODO: email form (below main content) -->
+<!-- TODO: email form -->
