Add tech stack icons

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bisaillon</title>
+    <title>A J Bisaillon</title>
     <link rel="stylesheet" href="index.css" />
     <meta
       name="viewport"
@@ -17,6 +17,11 @@
     />
 
     <!-- icons -->
+    <link
+      rel="stylesheet"
+      type='text/css'
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
     <script
       src="https://kit.fontawesome.com/238a71e136.js"
       crossorigin="anonymous"
@@ -28,18 +33,46 @@
       <div>
         <h1>Adrienne Bisaillon</h1>
         <h2>Software Engineer</h2>
+        <h3>1 YOE</h3>
         <div class="divider"></div>
-        <p>Coming soon!</p>
+
+        <div class="icons-container">
+          <!-- work projects -->
+          <h4>Tech stack for work:</h4>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
+            <span class="devicon-javascript-plain devicon" alt="JavaScript" aria-label="JavaScript"></span>
+          </a>
+          <a href="https://react.dev/" target="_blank">
+            <span class="devicon-react-original devicon" alt="React" aria-label="React"></span>
+          </a>
+          <a href="https://www.java.com/en/" target="_blank">
+            <span class="devicon-java-plain devicon" alt="Java" aria-label="Java"></span>
+          </a>
+          <a href="https://spring.io/" target="_blank">
+            <span class="devicon-spring-original devicon" alt="Spring" aria-label="Spring"></span>
+          </a>
+          <!-- side projects -->
+          <h4>Tech stack for fun:</h4>
+          <a href="https://kotlinlang.org/" target="_blank">
+            <span class="devicon-kotlin-plain devicon"alt="Kotlin" aria-label="Kotlin"></span>
+          </a>
+          <a href="https://spring.io/" target="_blank">
+            <span class="devicon-spring-original devicon"alt="Spring" aria-label="Spring"></span>
+          </a>
+          <a href="https://www.sqlite.org/" target="_blank">
+            <span class="devicon-sqlite-plain devicon" alt="SQLite" aria-label="SQLite"></span>
+          </a>
+        </div> 
       </div>
 
-      <div>
+      <div class="divider"></div>
+      <div class="icons-container">
         <a href="https://www.linkedin.com/in/abisaillon/">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         <a href="https://github.com/ajbisaillon">
           <i class="fa-brands fa-github"></i>
         </a>
-
         <i class="fa-regular fa-paper-plane"></i>
       </div>
     </div>
@@ -51,4 +84,4 @@
   </script>
 </html>
 
-<!-- TODO: email form -->
+<!-- TODO: email form (modal) -->
